# GarnishECS

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.cache/clangd/index/: ECS.cc.396A83885025BE02.idx  ECS.h.C82BB770A55BEF1A.idx  main.cc.58EF05723F351C0A.idx
examples/: CMakeLists.txt
examples/TestApp/: CMakeLists.txt  test_app.cc
include/: garnish_component.h  garnish_component.tpp  garnish_component_manager.h  garnish_component_manager.tpp  garnish_ecs.h  garnish_ecs.tpp  garnish_ecs_common.h  garnish_entity.h  garnish_entity_manager.h  garnish_system.h  garnish_system.tpp
src/: ECS.cc  garnish_component.cc  garnish_component_manager.cc  garnish_ecs.cc  garnish_entity.cc  garnish_entity_manager.cc
tests/: CMakeLists.txt  main.cc  runTests.sh
tests/basicComponentTest/: BasicComponentTest  CMakeLists.txt  main.cc
tests/entityTest/: CMakeLists.txt  EntityTest  main.cc
